# justetf-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  live.yml  release-please.yml
src/justetf/: __init__.py  _cache.py  _client.py  _countries.py  _gics.py  _holdings.py  _info.py  _isin.py  _profile.py  _sectors.py  api.py
tests/: conftest.py  test_allocation.py  test_api.py  test_cache.py  test_countries.py  test_gics.py  test_holdings.py  test_info.py  test_isin.py  test_sectors.py
