[project]
name = "justetf-py"
version = "0.3.0"
description = "Python client for ETF sector allocation data from justETF"
readme = "README.md"
license = "MIT"
authors = [{ name = "Pedro Machado", email = "pedrofcmachado26@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests==2.34.2",
]

[project.urls]
Homepage = "https://github.com/PedroFCM/justetf-py"
Issues = "https://github.com/PedroFCM/justetf-py/issues"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "responses==0.26.1",
    "ruff==0.15.16",
    "pre-commit==4.3.0"
]

[tool.pytest.ini_options]
markers = ["live: requires network access to justetf.com"]
addopts = "-m 'not live'"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "G", "PTH"]
ignore = ["SIM108"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/justetf"]

